--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
     <title>W. Noticias</title>
 </head>
-<body class="menu-open">
+<body class="escurecer">
     <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="logo site">
 
         <button>
-            <img src="./assets/images/icon-menu.svg" alt="">
+            <img src="./assets/images/icon-menu.svg" alt="hamburguer">
         </button>
 
-        <nav>
+        <nav class="abrir">
             <button>
                 <img src="./assets/images/icon-menu-close.svg" alt="icone X para fechar">
             </button>
