--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <script src="./script.js" defer></script>
     <title>W. Noticias</title>
 </head>
-<body class="escurecer">
-    <header class="header-mobile">
+<body>
+    <header>
         <img src="./assets/images/logo.svg" alt="logo site">
 
         <button>
             <img src="./assets/images/icon-menu.svg" alt="hamburguer">
         </button>
 
-        <nav class="abrir">
+        <nav class="mobile">
             <button>
                 <img src="./assets/images/icon-menu-close.svg" alt="icone X para fechar">
             </button>
@@ -29,12 +29,23 @@
             <a href="#">Trending</a> 
             <a href="#">Categoria</a> 
         </nav>
+
+        
+        <nav class="desktop">
+            <a href="#">Home</a> 
+            <a href="#">Novo</a> 
+            <a href="#">Popular</a> 
+            <a href="#">Trending</a> 
+            <a href="#">Categoria</a> 
+        </nav>
     </header>
 
     <main>
         <section class="primeira-secao">
+            <picture>
+               <source media="(min-width: 1110px)" srcset="./assets/images/image-web-3-desktop.jpg">
             <img src="./assets/images/image-web-3-mobile.jpg" alt="icone puzzle">
-            
+            </picture>
             <h1>O futuro brilhante da Web 3.0?</h1>
 
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?
