--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <main>
         <section class="primeira-secao">
             <picture>
-               <source media="(min-width: 1110px)" srcset="./assets/images/image-web-3-desktop.jpg">
+               <source media="(min-width: 700px)" srcset="./assets/images/image-web-3-desktop.jpg">
             <img src="./assets/images/image-web-3-mobile.jpg" alt="icone puzzle">
             </picture>
             <h1>O futuro brilhante da Web 3.0?</h1>
-
-            <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?
-            </p>
-
-            <button>Ler Mais</button>
+            <div>
+                <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
+                <button>Ler Mais</button>   
+            </div>
+            
         </section>
 
         <section class="segunda-secao">
